--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.0",
     "tailwind-merge": "^3.1.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
   },
   "devDependencies": {
